# desktop

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  PROGRESS_REPORT.md  README.md  STATUS.md  TODO.AI.md  build.rs
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  development.yml  release.yml
assets/themes/: dracula.json  gruvbox.json  monokai.json  nord.json  onedark.json  solarized-dark.json  solarized-light.json  tokyonight.json
benches/: performance.rs
docker/: Dockerfile
scripts/: build-all-platforms.sh  check.sh  install.sh  release.sh  uninstall.sh
scripts/release/: release.sh
src/: app.rs  lib.rs  main.rs
src/config/: mod.rs  themes.rs
src/crypto/: keychain.rs  mod.rs
src/platform/: bsd.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/sftp/: browser.rs  client.rs  mod.rs  operations.rs  transfer.rs
src/ssh/: active_session.rs  auth.rs  config_parser.rs  connection.rs  forwarding.rs  mod.rs  session_manager.rs
src/storage/: database.rs  mod.rs  sessions.rs  settings.rs
src/terminal/: buffer.rs  cell.rs  emulator.rs  mod.rs  parser.rs  renderer.rs  vt.rs
src/ui/: app_state.rs  components.rs  keyboard.rs  main_window.rs  mod.rs  notifications.rs  search.rs  tab.rs  tab_manager.rs
src/ui/screens/: connection_editor.rs  connection_list.rs  connection_manager.rs  forwarding_screen.rs  mod.rs  settings.rs  settings_screen.rs  sftp_browser.rs  sftp_browser_ui.rs  terminal_view.rs
src/utils/: errors.rs  helpers.rs  logging.rs  mod.rs
tests/: ssh_config_test.rs
tests/common/: mod.rs
tests/integration/: connection_flow_test.rs  full_workflow_test.rs  port_forwarding_test.rs  sftp_test.rs  theme_integration_test.rs
tests/unit/: database_test.rs  forwarding_test.rs  helpers_test.rs  platform_test.rs  settings_test.rs  theme_test.rs  transfer_test.rs  vt_parser_test.rs
