[package]
name = "tabssh"
version = "0.1.0"
edition = "2021"
authors = ["TabSSH Contributors"]
license = "MIT"
description = "Cross-platform SSH/SFTP client with browser-style tabs"
repository = "https://github.com/tabssh/desktop"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
russh = "0.40"
russh-keys = "0.40"
russh-sftp = "2.0"
eframe = { version = "0.25", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.25"
egui_extras = { version = "0.25", features = ["image"] }
vte = "0.13"
rusqlite = { version = "0.30", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
dirs = "5.0"
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.9"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = ["Win32_Security_Credentials"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = "2.1"

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release-small]
inherits = "release"
opt-level = "z"
strip = true

[[test]]
name = "ssh_config"
path = "tests/ssh_config_test.rs"

[[bench]]
name = "performance"
harness = false
